Fixes bug with parts of menu being cut off

--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -3,7 +3,7 @@
   background: #0000bb;
   color: #fff;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   overflow-x: scroll;
 }
 
